--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "ra-data-json-server": "^4.7.0",
     "react": "^18.2.0",
     "react-admin": "^4.7.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-mde": "^11.5.0",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/showdown": "^2.0.0",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
