--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "ra-data-json-server": "^4.7.0",
     "react": "^18.2.0",
     "react-admin": "^4.7.0",
@@ -17,6 +18,7 @@
     "showdown": "^2.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
